# obs-studio

./: CMakeLists.txt
.github/actions/windows-analysis/: action.yaml
.github/scripts/: .build.zsh  build-ubuntu  package-macos
.github/workflows/: push.yaml
frontend/cmake/: ui-dialogs.cmake  ui-qt.cmake
frontend/cmake/windows/: obs.rc.in
frontend/data/locale/: en-US.ini
frontend/dialogs/: OBSAbout.cpp  OBSGroqChat.cpp  OBSGroqChat.hpp
frontend/forms/: catbot.qrc
frontend/widgets/: AudioMixer.cpp  OBSBasic.cpp  OBSBasicControls.cpp  OBSBasicStatusBar.cpp  OBSBasic_StudioMode.cpp  OBSBasic_SysTray.cpp
